----------------------------------------------------

See the link:MIGRATION[] file for changes that introduced incompatibility to
older versions.

Current git version
-------------------

  * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
  * New client attribute 'floating_effectively' and associated X11 properties
    'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
  * New read-only client attribute 'decoration_geometry'.
  * Bug fixes:
    - Update floating geometry if a client's size hints change

Release 0.9.3 on 2021-05-15
---------------------------

  * herbstclient prints error messages always on stderr and normal output
    always on stdout (before, both were printed to the same channel).
  * True transparency support for frame and client decorations (requires a
    compositor like picom, compton, or xcompmgr)
  * Colors contain alpha-values (format #RRGGBBAA)
  * Do not draw frame background behind clients (so for semi-transparent
    client decorations, one does not see the frame decoration behind but the
    wallpaper instead)
  * New command line option '--replace' for replacing an existing window manager.
  * New command 'list_clients'.
  * The frame attributes ('selection', 'algorithm', 'fraction', 'split_type')
    are now writable.
  * New objects for panels (under 'panels', exposing attributes 'instance',
    'class', 'geometry', 'winid')
  * The setting 'monitors_locked' is now explicitly an unsigned integer.
  * The setting 'default_frame_layout' now holds an algorithm name.
  * New client attributes:
    - 'floating_geometry' holding the client's floating size (writable).
    - 'content_geometry' holding the geometry of the application's content.
  * The 'shift' command now moves the window to a neighboured monitor if
    the window cannot be moved within a tag in the desired direction.
  * New command 'lower' to lower a window in the stack.