@@ -10,6 +10,7 @@ Current git version
   * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
+  * The 'spawn' command now print an error message on exec failure
   * New read-only client attribute 'decoration_geometry'.
   * Bug fixes:
     - Update floating geometry if a client's size hints change
